# rust-cuts

./: .gitignore  Cargo.toml  README.md  build-app.sh  sample-commands.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli_args.rs  command_selection.rs  lib.rs  main.rs  parameter_processing.rs
crates/cli/src/arguments/: mod.rs  processing.rs  style.rs  validation.rs
crates/cli/src/command_selection/: colors.rs  input.rs  mod.rs  types.rs  ui.rs
crates/cli/src/parameters/: mod.rs  mode.rs  processing.rs  validation.rs
crates/cli/tests/: parameter_tests.rs
crates/core/: Cargo.toml
crates/core/src/: command_definitions.rs  config.rs  error.rs  execution.rs  file_handling.rs  interpolation.rs  lib.rs
crates/core/tests/: integration_tests.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/gui/src/app/: messages.rs  mod.rs  state.rs
crates/gui/src/execution/: command.rs  mod.rs  terminal.rs
crates/gui/src/ui/: components.rs  views.rs
crates/gui/src/utils/: display.rs
src/: cli_args.rs  command_definitions.rs  command_selection.rs  error.rs  execution.rs  file_handling.rs  interpolation.rs  main.rs
src/rc/: error.rs  execution.rs  mod.rs
