[package]
name = "rust-cuts-core"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.33"
serde = { version = "1.0.197", features = ["derive"] }
shellexpand = "3.1.0"
thiserror = "2.0.9"
log = "0.4.21"
leon = "3.0.1"
indexmap = "2.7.1"
