[package]
name = "rust-cuts-gui"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rcg"  # rust-cuts-gui
path = "src/main.rs"

[dependencies]
rust-cuts-core = { path = "../core" }
iced = { version = "0.13.1", features = ["tokio", "debug"] }
tracing-subscriber = "0.3.19"     # Keep same version as CLI for consistency
leon = "3.0.1"  # Template engine, same version as core